<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Software License Agreement (GPL)

\file      package.xml
\authors   Max Krichenbauer <v-krichenbauer7715@esol.co.jp>
\copyright Copyright (c) (2019), eSol, All rights reserved.

This program is free software: you can redistribute it and/or
modify it under the terms of the GNU General Public License as
published by the Free Software Foundation, either version 2 of the
License, or (at your option) any later version.

This program is distributed in the hope that it will be useful, but
WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package format="2">
  <name>ament_virtualenv</name>
  <version>0.0.1</version>
  <description>Bundle python requirements in a ament package via virtualenv.</description>

  <maintainer email="v-krichenbauer7715@esol.co.jp">Max Krichenbauer</maintainer>
  <license>GPL</license>
  <author email="v-krichenbauer7715@esol.co.jp">Max Krichenbauer</author>

  <!--
  <build_export_depend>python-enum34</build_export_depend>
  <build_export_depend>python-packaging</build_export_depend>
  <build_export_depend>python-virtualenv</build_export_depend>
  <build_export_depend>python3-dev</build_export_depend>
  <build_export_depend>python3-venv</build_export_depend>
  <build_export_depend>rosbash</build_export_depend>
  <build_export_depend>virtualenv</build_export_depend>
  -->
  <exec_depend>python-enum34</exec_depend>
  <exec_depend>python-packaging</exec_depend>
  <exec_depend>python-virtualenv</exec_depend>
  <exec_depend>python3-dev</exec_depend>
  <exec_depend>python3-venv</exec_depend>
  <!-- <exec_depend>rosbash</exec_depend> -->
  <exec_depend>virtualenv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
