<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Software License Agreement (GPL)

\file      package.xml
\authors   Max Krichenbauer <v-krichenbauer7715@esol.co.jp>
\copyright Copyright (c) (2019), eSol, All rights reserved.

This program is free software: you can redistribute it and/or
modify it under the terms of the GNU General Public License as
published by the Free Software Foundation, either version 2 of the
License, or (at your option) any later version.

This program is distributed in the hope that it will be useful, but
WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package format="2">
  <name>test_ament_virtualenv</name>
  <version>0.0.5</version>
  <description>Package to test ament_virtualenv.</description>

  <maintainer email="v-krichenbauer7715@esol.co.jp">Max Krichenbauer</maintainer>
  <license>GPL</license>
  <author email="v-krichenbauer7715@esol.co.jp">Max Krichenbauer</author>

  <build_depend>ament_virtualenv</build_depend>
  <test_depend>ament_virtualenv</test_depend>
  
  <export>
    <pip_requirements>requirements.txt</pip_requirements>
    <build_type>ament_python</build_type>
  </export>

</package>
